$Id$

TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- bird and netsnmp don't build with more than one job

Latest changes:
- Added libelf library needed by ltrace - BUILD OK, BUT UNTESTED
- Added section "debug helpers" in menuconfig
- Added debug helper package strace (binary only)
- Added debug helper package ltrace (binary only) - COMPILES, BUT CRASHES
- Updated cifsmount package to 0.2: added CGI (web config) for up to three
  mounts; added init.d start/stop scripts; added script 'cifsmount' for more
  convenient command line (un-)mounting.

=== release ds-0.2.9_26-14.3 ===

- Cross-cutting changes in ds-mod-specific package download:
  * New shell script tools/ds_download provides a uniform way to download
    ds-mod-specific packages such as application and add-on packages as well
    as precompiled toolchains. The script first checks a predefined list of
    download servers (mirrors) and only uses an optionally provided "original"
    server as fallback, which is important for new package versions not
    available on mirrors yet.
  * New variable DL_TOOL in Makefile points to tools/ds_download
  * List of download sites (mirrors) can be edited in menuconfig (Advanced
    options -> DS-Mod package download sites). Currently there are five slots
    for download servers, two of which have default values. Two others are
    reserved for later use and #5 is freely editable by users. This enables
    users to set up their private mirrors on their own LAN or WAN servers.
  * *.mk files loading mod-specific packages have all been made "mirror-aware",
    i.e. they all call DL_TOOL with the appropriate parameters. Specifically,
    all former primary download sites have been preserved as fallback servers.
- Major menuconfig restructuring. For example (there is more):
  * Iptables' shared libs and kernel modules are dependent on a top level
    setting and can be deselected as  whole groups.